compiler/tools/fpp-check/test/component_instance_def/queued_cpu.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/queued_cpu.fpp: 11.7
  cpu 0
      ^
error: invalid component instance definition c: queued component may not have CPU affinity
